# HikariWave

./: .gitignore  Makefile  README.md  pyproject.toml
backend/: config.yaml
backend/app/: main.py
backend/app/api/: dependencies.py  router.py  websocket.py
backend/app/api/endpoints/: audio.py  covers.py  generate.py  history.py  marketplace.py  providers.py  tasks.py
backend/app/core/: config.py  settings.py
backend/app/db/: session.py
backend/app/models/: database.py
backend/app/providers/: manager.py
backend/app/providers/image/: base.py  together.py
backend/app/providers/llm/: base.py  ollama.py  openai_compat.py  openrouter.py
backend/app/providers/manager/: base.py  llm.py  music.py
backend/app/providers/music/: ace_step.py  base.py  huggingface.py  musicgen.py
backend/app/providers/music/acestep/: custom.py  official.py
backend/app/repositories/: generation.py
backend/app/schemas/: generation.py  marketplace.py  provider.py
backend/app/services/: config_service.py  generation.py  llm_service.py  model_marketplace.py  music_generation.py  provider_service.py  storage.py
backend/app/services/music/: __init__.py  inference.py  pipelines.py
backend/app/tasks/: generation.py
backend/app/utils/: hf_cache.py
desktop/: package.json
desktop/src/: App.tsx  index.css  main.tsx
desktop/src-tauri/icons/: icon.icns
desktop/src/components/: ErrorBoundary.tsx  LyricsPanel.tsx  Player.tsx  Sidebar.tsx
desktop/src/components/create/: ExtendRemixForms.tsx  GenerationProgress.tsx  GenerationResult.tsx
desktop/src/components/providers/: AceStepSection.tsx  CachedModelCard.tsx  MarketplaceSection.tsx  ProviderFormModal.tsx
desktop/src/constants/: musicOptions.ts  providerOptions.ts
desktop/src/hooks/: useTaskPolling.ts
desktop/src/i18n/locales/: en.json  zh-CN.json
desktop/src/pages/: CreatePage.tsx  HistoryPage.tsx  LibraryPage.tsx  ProvidersPage.tsx  SettingsPage.tsx
desktop/src/pages/providers/: ImageTab.tsx  LLMTab.tsx  MusicTab.tsx
desktop/src/services/: api.ts
desktop/src/stores/: appStore.ts  createStore.ts  libraryStore.ts  playerStore.ts  providerStore.ts  settingsStore.ts
desktop/src/types/: index.ts
desktop/src/utils/: format.ts  lyrics.ts
