[project]
name = "hikariwave"
version = "0.1.0"
description = "HikariWave - AI Music Generation Platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
    "pydub>=0.25.0",
    "soundfile>=0.12.0",
    "huggingface_hub>=0.25.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.40.0",
    "diffusers>=0.30.0",
    "accelerate>=0.30.0",
    "scipy>=1.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.envs.default.scripts]
dev = "uvicorn backend.app.main:app --reload --port 23456"
lint = "ruff check backend/"
fmt = "ruff format backend/"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RET",    # flake8-return
    "PTH",    # flake8-use-pathlib
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
    "PLC",    # pylint convention
    "PLE",    # pylint errors
    "PLW",    # pylint warnings
    "TRY",    # tryceratops
    "FLY",    # flynt (f-string conversion)
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "ERA",    # eradicate (commented-out code)
    "COM818", # trailing comma on bare tuple
]
ignore = [
    "B008",    # Depends() / Query() in FastAPI defaults — standard pattern
    "B904",    # raise-without-from — too noisy for re-raises in except blocks
    "PLC0415", # import-not-at-top — intentional lazy imports for heavy deps
    "TRY003",  # raise-vanilla-args — we use inline messages for clarity
    "TRY400",  # error-instead-of-exception in logging — stylistic
    "RET504",  # unnecessary-assign — sometimes aids readability
    "S110",    # try-except-pass — intentional in cleanup code
    "SIM105",  # use-contextlib-suppress — explicit try/except is clearer
    "SIM108",  # use-ternary — multi-line if/else is often more readable
    "PLW2901", # redefined-loop-name — common pattern in transforms
]

[tool.ruff.lint.per-file-ignores]
"backend/app/api/endpoints/*.py" = [
    "S113",    # request-without-timeout — FastAPI handles timeouts
]
"backend/app/providers/music/huggingface.py" = [
    "TRY300",  # complex multi-branch try blocks with early returns
]
"backend/tests/**" = [
    "S101",    # assert in tests is expected
]

[tool.ruff.format]
quote-style = "double"
